--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "codejam-culture-portal",
-  "homepage": "https://arthur199212.github.io/CodeJam-Culture-Portal/",
+  "homepage": "https://ivankononovich.github.io/codejam-culture-portal/",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -18,7 +18,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -34,5 +36,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "^2.0.1"
   }
 }
