--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "react-router-dom": "^5.0.1",
     "react-scripts": "^2.1.8",
     "react-yandex-maps": "^4.0.1",
-    "vertical-timeline-component-for-react": "^1.0.6"
+    "vertical-timeline-component-for-react": "^1.0.6",
+    "react-images": "1.0.0",
+    "react-photo-gallery": "8.0.0"
   },
   "scripts": {
     "start": "react-scripts start",
