--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "json-server": "^0.15.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
+    "react-helmet": "^5.2.1",
     "react-images": "1.0.0",
     "react-photo-gallery": "8.0.0",
     "react-responsive": "^7.0.0",
