--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-photo-gallery": "8.0.0",
     "react-responsive": "^7.0.0",
     "react-router-dom": "^5.0.1",
+    "react-router-scroll-top": "^0.2.1",
     "react-scripts": "^2.1.8",
     "react-yandex-maps": "^4.0.1",
     "vertical-timeline-component-for-react": "^1.0.6"
